// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render() should render component correctly 1`] = `
<div
  className="ui input small"
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    style={
      Object {
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "none",
        "borderTop": "none",
        "paddingLeft": "0.5em",
        "paddingRight": "0.5em",
      }
    }
    type="text"
    value="abc"
  />
</div>
`;

exports[`render() should render component with additional HTML attributes correctly 1`] = `
<div
  className="ui input small"
  id="test1"
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    style={
      Object {
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "none",
        "borderTop": "none",
        "paddingLeft": "0.5em",
        "paddingRight": "0.5em",
      }
    }
    type="text"
    value="abc"
  />
</div>
`;

exports[`render() should render component with additional class names correctly 1`] = `
<div
  className="ui input small test"
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    style={
      Object {
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "none",
        "borderTop": "none",
        "paddingLeft": "0.5em",
        "paddingRight": "0.5em",
      }
    }
    type="text"
    value="abc"
  />
</div>
`;

exports[`render() should render component with additional styles correctly 1`] = `
<div
  className="ui input small"
  style={
    Object {
      "flexDirection": "column",
      "visibility": "hidden",
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    style={
      Object {
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "none",
        "borderTop": "none",
        "paddingLeft": "0.5em",
        "paddingRight": "0.5em",
      }
    }
    type="text"
    value="abc"
  />
</div>
`;

exports[`render() should render disabled component correctly 1`] = `
<div
  className="ui input small disabled"
  style={
    Object {
      "flexDirection": "column",
    }
  }
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    style={
      Object {
        "borderLeft": "none",
        "borderRadius": 0,
        "borderRight": "none",
        "borderTop": "none",
        "paddingLeft": "0.5em",
        "paddingRight": "0.5em",
      }
    }
    type="text"
    value="abc"
  />
</div>
`;
